--- a/www/templates/ajuda.html
+++ b/www/templates/ajuda.html
@@ -11,11 +11,11 @@
 
         <div style="width: 300px; height: 62px;" class="spacer"></div>
         <p class=" " style="color:#FFFFFF;font-size:17px;text-align:justify;" id="ajuda-markdown1">
-            <strong>O JOGO</strong> consiste em responder desafios lógicos e matemáticos começando pelo nivel fácil, e aumentando o nível de dificuldade a cada acerto.</p>
+            O QuizOEIRA (Quiz Orientado ao Estímulo Intelectual e Raciocínio Analítico) é um <strong>JOGO</strong> que consiste em responder uma série de desafios lógicos e matemáticos, que vão aumentando o nivel de dificuldade a cada acerto.</p>
         <div style="width: 300px; height: 15px;" class="spacer"></div>
-        <p class=" " style="color:#FFFFFF;font-size:17px;text-align:justify;" id="ajuda-markdown2">As respostas deverão ser inseridas com números ou palavras simples.</p>
+        <p class=" " style="color:#FFFFFF;font-size:17px;text-align:justify;" id="ajuda-markdown2">As respostas deverão ser inseridas apenas com <strong>NÚMEROS</strong>.</p>
         <div style="width: 300px; height: 9px;" class="spacer"></div>
-        <p class=" " style="color:#FFFFFF;font-size:17px;text-align:justify;" id="ajuda-markdown3">Lembrando que caso você erre alguma resposta, voltará para o início, então muito cuidado e atenção antes de confirmar sua resposta! Bom jogo!</p>
+        <p class=" " style="color:#FFFFFF;font-size:17px;text-align:justify;" id="ajuda-markdown3">Caso você erre alguma pergunta, terá que voltar para o início. Portanto, cuidado ao confirmar sua resposta! Boa sorte!</p>
         <a class="button button-stable button-block icon " style="margin-top: 10%; font-weight:500;color:#EF473A;"
         id="ajuda-button3" ui-sref="questoes" ng-click="iniciarJogo()">Ir para o jogo</a>
     </ion-content>
