--- a/www/templates/inicio.html
+++ b/www/templates/inicio.html
@@ -2,10 +2,10 @@
     <ion-content scroll="true" padding="true" style="background: url(img/H40djXAPSeaBbIP8wdFz_quizteste.jpg) no-repeat center;background-size:cover;" class="manual-ios-statusbar-padding">
         <div style="width: 283px; height: 49px;" class="spacer"></div>
         <div class="fundoTitulo" style="box-shadow: 2px 2px 0px grey; border-radius: 8px;">
-        <h1 style="border-color: black; border-radius: 8px; border-width: 1px; font-family: 'Lithograph'; color: rgb(239, 71, 58); background-color: rgba(255, 255, 255, 0.8); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; color: rgb(239, 71, 58); text-align: center;" id="inicio-heading1">Quizoeira</h1>
+        <h1 style="border-color: black; border-radius: 8px; border-width: 1px; font-family: 'Lithograph'; color: rgb(239, 71, 58); background-color: rgba(255, 255, 255, 0.8); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; color: rgb(239, 71, 58); text-align: center;" id="inicio-heading1">QuizOEIRA</h1>
         </div>
         <div style="width: 283px; height: 200px;" class="spacer"></div>
-        <a class=" button button-assertive  button-block icon" id="inicio-button1" ui-sref="questoes" ng-click="iniciarJogo()">Jogar</a>
+        <a class=" button button-assertive  button-block icon" id="inicio-button1" ui-sref="questoes">Jogar</a>
         <a class=" button button-assertive  button-block icon" id="inicio-button2" ui-sref="ajuda">Ajuda</a>
     </ion-content>
 </ion-view>
