--- a/www/templates/inicio.html
+++ b/www/templates/inicio.html
@@ -1,8 +1,8 @@
 <ion-view class=" " style="background-color: rgb(248, 248, 248);" id="page1" title="Inicio" hide-nav-bar="true">
-    <ion-content scroll="true" padding="true" style="background: url(img/H40djXAPSeaBbIP8wdFz_quizteste.jpg) no-repeat center;background-size:cover;" class="manual-ios-statusbar-padding">
+    <ion-content scroll="true" padding="true" style="background: url(img/bg.jpg) no-repeat center;background-size:cover;" class="manual-ios-statusbar-padding">
         <div style="width: 283px; height: 49px;" class="spacer"></div>
-        <div class="fundoTitulo" style="box-shadow: 2px 2px 0px grey; border-radius: 8px;">
-        <h1 style="border-color: black; border-radius: 8px; border-width: 1px; font-family: 'Lithograph'; color: rgb(239, 71, 58); background-color: rgba(255, 255, 255, 0.8); text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; color: rgb(239, 71, 58); text-align: center;" id="inicio-heading1">QuizOEIRA</h1>
+        <div class="fundoTitulo" style="box-shadow: 1px 1px 0px gray; border-radius: 8px;">
+        <h1 style="border-color: black; border-radius: 8px; border-width: 1px; font-family: 'Lithograph'; color: rgb(239, 71, 58); background-color: rgba(255, 255, 255, 0.8); color: rgb(239, 71, 58); text-align: center;" id="inicio-heading1">QUIZOEIRA</h1>
         </div>
         <div style="width: 283px; height: 200px;" class="spacer"></div>
         <a class=" button button-assertive  button-block icon" id="inicio-button1" ui-sref="questoes">Jogar</a>
