--- a/www/templates/questoes.html
+++ b/www/templates/questoes.html
@@ -25,6 +25,6 @@
 
 
 
-          <button class="button button-light button-block icon" ng-click="irProximaQuestao()" style="font-weight:500;color:#EF473A;" id="q1-button10">Enviar resposta</button>
+          <button class="button button-light button-block icon" ng-click="callNextQuestion()" style="font-weight:500;color:#EF473A;" id="q1-button10">Enviar resposta</button>
     </ion-content>
 </ion-view>
